--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-435.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.06MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-476.2KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇫🇷 法国-1.97MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-5.47MB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
-  - {name: 🇸🇬 新加坡-534.5KB/s(Youtube:不良林), server: 180.215.196.10, port: 39043, type: vmess, uuid: 1b2f44e4-a810-48a8-b620-a4567b46c9b7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 180.215.196.10}}
-  - {name: 🇩🇪 德国-423.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-420.4KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 波兰-1.98MB/s(Youtube:不良林), server: 217.30.10.63, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-924.4KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 167.88.63.59, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.107.226.132, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇫🇷 法国-1.90MB/s(Youtube:不良林), server: 149.202.82.172, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-435.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-476.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-534.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-423.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-420.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-325.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
