--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 167.88.62.68, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-349.3KB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
-  - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.29MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-6.19MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.20MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 196.247.59.156, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-891.6KB/s(Youtube:不良林), server: 193.108.118.36, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-527.0KB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-5.10MB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-629.1KB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-363.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-319.0KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-324.8KB/s(Youtube:不良林), server: scloud51.jafiyun.life, port: 22051, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud51.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-889.2KB/s(Youtube:不良林), server: 213.183.51.171, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇩🇪 德国-1.37MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-303.3KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇩🇪 德国-891.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-629.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-889.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
