--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: tj-hk01.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-hk01.yiyodns.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.90MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.89MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.06MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-10.63MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.52MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.24MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.70MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-5.97MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-872.7KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-477.1KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇭🇰 香港-1.89MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
